objects/NGCC_CCM_Requalification__c.object
<CustomObject>
    <fields>
        <fullName>CCMQueueId__c</fullName>
        <label>CCMQueueId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGCC_CampaignAssignmentRuleset__c</fullName>
        <label>NGCC_CampaignAssignmentRuleset</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>NGCC: This custom settings will be responsible for route rejected lead from post sales user to CCM queue based on theater.</description>
    <label>NGCC_CCM_Requalification</label>
    <listViews>
        <fullName>NGCC</fullName>
        <columns>NAME</columns>
        <columns>CCMQueueId__c</columns>
        <filterScope>Everything</filterScope>
        <label>NGCC</label>
        <language>en_US</language>
    </listViews>
</CustomObject>